--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "swag-labs-demo-app",
   "version": "1.0.0",
   "description": "This framework is to test Swag Lab's e2e scenarios.",
-  "main": "index.js",
   "scripts": {
-    "test": "npx cypress open --e2e"
+    "build": "tsc -p tsconfig.build.json",
+    "clean:reports": "rm -rf reports",
+    "cypress:open": "npx cypress open --e2e --browser electron",
+    "cypress:headless": "npx cypress run --headless --browser chrome",
+    "generate-merged-report": "node report-config.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +23,26 @@
     "url": "https://github.com/Chathura1990/zendesk.swaglabs/issues"
   },
   "homepage": "https://github.com/Chathura1990/zendesk.swaglabs#readme",
-  "dependencies": {
-    "cypress": "^12.17.2"
+  "devDependencies": {
+    "@types/node": "^20.8.2",
+    "cypress": "^12.17.2",
+    "cypress-cucumber-preprocessor": "^4.3.1",
+    "cypress-wait-until": "^2.0.1",
+    "cypress-xpath": "^2.0.1",
+    "multiple-cucumber-html-reporter": "^3.5.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": false,
+    "cucumberJson": {
+      "generate": true,
+      "outputFolder": "reports/cucumber",
+      "filePrefix": "",
+      "fileSuffix": ".cucumber",
+      "step_definitions": "cypress/support/step_definitions"
+    }
   }
 }
